Update cookie policy for clarity and brevity (br.mdx)
Rewrote the Brazilian Portuguese cookie policy to be more concise, user-friendly, and focused on key points: what is (not) stored, types and duration of cookies, consent and control, third-party providers, data location, and update practices. Removed lengthy legal and technical explanations, tables, and redundant sections to improve readability and transparency for users.

--- a/content/about/es.mdx
+++ b/content/about/es.mdx
@@ -14,8 +14,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="transforming-women-healthcare"
   headingLevel="h1"
-  title="Conectándola con profesionales de salud especializados en salud de la mujer"
-  description="En Eleva Care, proporcionamos una plataforma tecnológica segura que empodera a las mujeres para encontrar y conectarse con profesionales de salud licenciados para atención personalizada."
+  title="Transformando la salud de la mujer con compasión y cuidado basado en evidencia"
+  description="Estamos aquí para facilitarte encontrar la ayuda adecuada, en el momento justo. Eleva Care te conecta con profesionales de salud con licencia mediante una plataforma segura y confiable."
 />
 
 <MissionSection
@@ -23,11 +23,11 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   description={[
     {
       paragraph:
-        'Nuestra misión es proporcionar un marketplace tecnológico seguro que conecte a mujeres con profesionales de salud independientes y licenciados. Ofrecemos la plataforma y las herramientas; profesionales de salud cualificados brindan su atención médica.',
+        'Creemos que toda mujer merece un cuidado experto y cercano. Nuestra plataforma te ayuda a encontrar profesionales independientes y con licencia en quienes confiar—para que te sientas acompañada en cada paso.',
     },
     {
       paragraph:
-        'Creemos que la tecnología puede hacer que la atención médica de calidad sea más accesible. Al conectar pacientes con profesionales verificados a través de nuestra plataforma, empoderamos a las mujeres con elección, conveniencia y acceso a atención especializada en todas las etapas de la vida.',
+        'Nosotros ponemos la tecnología que facilita el acceso al cuidado. Tu profesional elegido ofrece tu atención médica. Juntos, te ayudamos a avanzar con confianza.',
     },
   ]}
   statsTitle="Los números"
@@ -40,8 +40,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="our-vision"
   label="Nuestra Visión"
-  title="Conectando mujeres con profesionales de salud expertos"
-  description="Ser la plataforma tecnológica líder que conecta a mujeres con profesionales de salud licenciados, haciendo que la atención especializada sea accesible y conveniente en todas las etapas de la vida."
+  title="Unimos ciencia y cuidado—para que el apoyo se sienta personal"
+  description="Acercamos la experiencia adecuada a ti—haciendo que el cuidado especializado sea más accesible en cada etapa de la vida."
 />
 
 <BeliefsSection
@@ -51,22 +51,21 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     {
       title: 'Acceso a Atención Médica de Calidad',
       description:
-        'Toda mujer merece acceso a atención médica de calidad, independientemente de su ubicación o circunstancias.',
+        'Toda mujer merece acceso a atención de calidad, sin importar su ubicación o circunstancias.',
     },
     {
       title: 'El Conocimiento es Poder',
-      description:
-        'Empoderar a las mujeres con información basada en evidencia para tomar decisiones informadas sobre atención médica.',
+      description: 'Información clara y basada en evidencia para decidir con confianza.',
     },
     {
       title: 'Atención Colaborativa',
       description:
-        'Mejores resultados de salud se logran a través de la colaboración entre pacientes y proveedores de atención médica.',
+        'Mejores resultados suceden cuando trabajamos junto a profesionales de confianza.',
     },
     {
-      title: 'Viaje de por Vida',
+      title: 'Un Viaje de por Vida',
       description:
-        'La salud de la mujer es un viaje continuo que evoluciona a través de diferentes etapas de la vida.',
+        'La salud de la mujer cambia con el tiempo—estamos aquí para acompañarte en cada etapa.',
     },
   ]}
 />
@@ -74,22 +73,22 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="our-team"
   label="Conozca nuestro equipo"
-  title="Liderados por innovadores y expertos en salud"
-  description="Nuestro equipo combina experiencia en salud de la mujer, tecnología y atención al paciente para revolucionar la prestación de atención médica."
+  title="Liderados por innovadores y expertos con calidez humana"
+  description="Nuestro equipo reúne salud de la mujer, tecnología y cuidado al paciente—para que te sientas acompañada, informada y cuidada."
 />
 
 <TeamSection
   description={[
     {
       paragraph:
-        'Fundada por profesionales de salud que presenciaron de primera mano las brechas en el acceso a la atención médica de la mujer, Eleva Care surgió como una solución tecnológica para conectar pacientes con profesionales expertos de manera más eficiente.',
+        'Eleva Care nació de una idea sencilla: el cuidado experto debe ser más fácil de alcanzar. Nuestros fundadores y consejeros vieron las brechas que muchas mujeres enfrentan—y construyeron una forma mejor de conectarte con profesionales de confianza.',
     },
     {
       paragraph:
-        'Hoy, Eleva Care opera un marketplace digital seguro que conecta a mujeres con profesionales de salud independientes y licenciados. Nuestra plataforma proporciona la tecnología; su profesional elegido brinda su atención médica.',
+        'Hoy, Eleva Care opera un marketplace digital seguro que conecta a mujeres con profesionales independientes y con licencia. Nosotros ponemos la tecnología; tu profesional elegido brinda tu atención.',
     },
   ]}
-  ctaText="Lea nuestra historia"
+  ctaText="Lee nuestra historia"
   ctaLink="/history"
   title="Nuestro Liderazgo"
   leadership={[
@@ -112,7 +111,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   id="board-of-advisors"
   label="Guiados por expertos de la industria"
   title="Consejo de Asesores"
-  description="Nuestro consejo asesor reúne a voces líderes en salud de la mujer, innovación en atención médica y transformación digital."
+  description="Nuestro consejo reúne líderes en salud de la mujer, innovación y evidencia clínica."
 />
 
 <AdvisorsSection
@@ -123,7 +122,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇳🇴',
       role: 'Asesora en Salud del Suelo Pélvico',
       quote:
-        'El entrenamiento basado en evidencia de los músculos del suelo pélvico no solo previene y trata disfunciones—empodera a las mujeres para vivir con confianza y plenamente en todas las etapas de la vida.',
+        'El entrenamiento basado en evidencia del suelo pélvico no solo previene y trata disfunciones—empodera a las mujeres a vivir con confianza en cada etapa.',
       image: '/img/about/team/team-kari-bo.jpg',
     },
         {
@@ -131,7 +130,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇦🇷 🇪🇸',
       role: 'Asesor en Ciencia del Ejercicio',
       quote:
-        'La evidencia muestra que el ejercicio personalizado durante el embarazo puede transformar los resultados de salud de las mujeres.',
+        'La evidencia muestra que el ejercicio personalizado durante el embarazo puede transformar la salud de las mujeres.',
       image: '/img/about/team/team-ruben-barakat.jpg',
     },
         {
@@ -145,33 +144,33 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     {
       name: 'Cristine Homsi Jorge, PT, PhD',
       flags: '🇧🇷',
-      role: "Asesora en Salud de la Mujer",
+      role: 'Asesora en Salud de la Mujer',
       quote:
-        'La investigación clínica y la educación empoderan a las mujeres para tomar decisiones informadas sobre su viaje de salud',
+        'La investigación clínica y la educación empoderan a las mujeres para tomar decisiones informadas sobre su salud.',
       image: '/img/about/team/team-cristine-homsi-jorge.jpg',
     },
  {
       name: 'Annelie Gutke, PT, PhD',
       flags: '🇸🇪',
-      role: "Asesora en Salud de la Mujer",
+      role: 'Asesora en Salud de la Mujer',
       quote:
-        'Comprender los mecanismos del dolor transforma cómo cuidamos a las mujeres durante el embarazo y más allá.',
+        'Comprender el dolor transforma cómo cuidamos a las mujeres durante el embarazo y más allá.',
       image: '/img/about/team/team-annelie-gutke.jpg',
     },
        {
       name: 'Joana Goulão Barros, MD, PhD',
       flags: '🇵🇹',
-      role: 'Asesora en Atención del Ciclo de Vida de la Mujer',
+      role: 'Asesora en Cuidado a lo Largo de la Vida',
       quote:
-        'La atención integral y en equipo en todas las etapas de la vida—desde la adolescencia hasta el embarazo, el parto y la menopausia—garantiza que las mujeres reciban el apoyo personalizado que necesitan para prosperar.',
+        'Un cuidado en equipo y continuo—de la adolescencia al embarazo, parto y menopausia—garantiza apoyo personalizado para prosperar.',
       image: '/img/about/team/team-joana-barros.jpg',
     },
     {
       name: 'Patricia Driusso, PT, PhD',
       flags: '🇧🇷',
-      role: "Asesora en Salud de la Mujer",
+      role: 'Asesora en Salud de la Mujer',
       quote:
-        'La investigación clínica avanza los tratamientos de rehabilitación mientras empodera a las mujeres a través de la educación basada en evidencia.',
+        'La investigación clínica impulsa la rehabilitación y empodera a través de educación basada en evidencia.',
       image: '/img/about/team/team-patricia-driusso.jpg',
     },
 
@@ -180,7 +179,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇺🇸',
       role: 'Asesora en Biomecánica y Salud Perinatal',
       quote:
-        'Comprender los patrones de movimiento durante y después del embarazo ayuda a optimizar la atención y mejorar los resultados a largo plazo para las mujeres.',
+        'Entender el movimiento durante y después del embarazo ayuda a optimizar el cuidado y los resultados a largo plazo.',
       image: '/img/about/team/team-jenny-bagwell-california-usa.jpg',
     },
 
@@ -190,8 +189,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="join-our-network"
   label="Únase a nuestra red"
-  title="Transforme la atención médica de la mujer con nosotros"
-  description="Únase a una comunidad de profesionales de salud dedicados a hacer que la atención de calidad sea accesible para mujeres en todas partes."
+  title="Transforme la atención de la mujer con nosotros"
+  description="Únase a una comunidad de profesionales dedicados a hacer la atención de calidad más accesible."
 />
 
 <JoinNetworkSection
@@ -200,17 +199,16 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     {
       title: 'Práctica Independiente',
       description:
-        'Mantenga su independencia como proveedor de atención médica licenciado. Establezca su propio horario, tarifas y políticas de práctica mientras usa nuestra plataforma tecnológica.',
+        'Trabaje en sus términos con una plataforma flexible y segura. Defina sus horarios, tarifas y políticas.',
     },
     {
       title: 'Plataforma Tecnológica Segura',
       description:
-        'Acceda a nuestro sistema seguro de reservas, programación, procesamiento de pagos y almacenamiento cifrado de notas clínicas. Proporcionamos la tecnología; usted brinda la atención médica.',
+        'Use nuestras reservas, agenda, pagos y notas cifradas—para enfocarse en el cuidado. Nosotros ponemos la tecnología; usted brinda la atención.',
     },
     {
       title: 'Red Profesional',
-      description:
-        'Conéctese con otros profesionales de salud independientes en nuestra red para oportunidades de desarrollo profesional e intercambio de conocimientos.',
+      description: 'Conéctese con pares para colaboración, aprendizaje y apoyo.',
     },
   ]}
   applyUrl="mailto:patimota@gmail.com?subject=Solicitud%20para%20Eleva%20Care&body=Hola%20Patrícia,%20me%20gustaría%20solicitar%20unirme%20a%20Eleva%20Care."
