--- a/content/about/pt.mdx
+++ b/content/about/pt.mdx
@@ -14,8 +14,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="transforming-women-healthcare"
   headingLevel="h1"
-  title="Conectando-a com profissionais de saúde especializados em saúde da mulher"
-  description="Na Eleva Care, fornecemos uma plataforma tecnológica segura que capacita as mulheres a encontrar e conectar-se com profissionais de saúde licenciados para cuidados personalizados."
+  title="A transformar a saúde da mulher com compaixão e cuidado baseado em evidência"
+  description="Estamos aqui para tornar mais fácil encontrar a ajuda certa, no momento certo. A Eleva Care liga-a a profissionais licenciados através de uma plataforma segura e de confiança."
 />
 
 <MissionSection
@@ -23,11 +23,11 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   description={[
     {
       paragraph:
-        'A nossa missão é fornecer um marketplace tecnológico seguro que conecta mulheres com profissionais de saúde independentes e licenciados. Oferecemos a plataforma e as ferramentas; profissionais de saúde qualificados prestam os seus cuidados médicos.',
+        'Acreditamos que toda mulher merece cuidados especializados e humanos. A nossa plataforma ajuda a encontrar profissionais independentes e licenciados em quem confiar—para que se sinta acompanhada em cada passo.',
     },
     {
       paragraph:
-        'Acreditamos que a tecnologia pode tornar os cuidados de saúde de qualidade mais acessíveis. Ao conectar pacientes com profissionais verificados através da nossa plataforma, capacitamos as mulheres com escolha, conveniência e acesso a cuidados especializados em todas as etapas da vida.',
+        'Nós fornecemos a tecnologia que facilita o acesso ao cuidado. O(a) profissional que escolhe presta os seus cuidados. Em conjunto, ajudamo-la a avançar com confiança.',
     },
   ]}
   statsTitle="Os números"
@@ -40,8 +40,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="our-vision"
   label="A Nossa Visão"
-  title="Conectando mulheres com profissionais de saúde especializados"
-  description="Ser a plataforma tecnológica líder que conecta mulheres com profissionais de saúde licenciados, tornando os cuidados especializados acessíveis e convenientes em todas as etapas da vida."
+  title="Aproximamos ciência e cuidado—para que o apoio seja pessoal"
+  description="Trazemos a experiência certa até si—tornando o cuidado especializado mais acessível em cada fase."
 />
 
 <BeliefsSection
@@ -49,24 +49,23 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   title="As Nossas Convicções"
   beliefs={[
     {
-      title: 'Acesso a Cuidados de Saúde de Qualidade',
+      title: 'Acesso a Cuidados de Qualidade',
       description:
-        'Todas as mulheres merecem acesso a cuidados de saúde de qualidade, independentemente da localização ou circunstâncias.',
+        'Todas as mulheres merecem cuidados de qualidade, independentemente da sua realidade.',
     },
     {
       title: 'Conhecimento é Poder',
-      description:
-        'Capacitar as mulheres com informação baseada em evidências para tomar decisões informadas sobre cuidados de saúde.',
+      description: 'Informação clara e baseada em evidência para decidir com confiança.',
     },
     {
       title: 'Cuidado Colaborativo',
       description:
-        'Melhores resultados de saúde são alcançados através da colaboração entre pacientes e prestadores de cuidados de saúde.',
+        'Melhores resultados acontecem quando trabalhamos com profissionais de confiança.',
     },
     {
-      title: 'Jornada para a Vida',
+      title: 'Uma Jornada para a Vida',
       description:
-        'A saúde da mulher é uma jornada contínua que evolui através de diferentes etapas da vida.',
+        'A saúde da mulher muda ao longo do tempo—estamos aqui para a acompanhar em cada etapa.',
     },
   ]}
 />
@@ -74,19 +73,19 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="our-team"
   label="Conheça a nossa equipa"
-  title="Liderados por inovadores e especialistas em saúde"
-  description="A nossa equipa combina experiência em saúde da mulher, tecnologia e cuidados aos pacientes para revolucionar a prestação de cuidados de saúde."
+  title="Liderados por inovadores e especialistas com empatia"
+  description="A nossa equipa junta saúde da mulher, tecnologia e cuidado—para que se sinta acompanhada, informada e cuidada."
 />
 
 <TeamSection
   description={[
     {
       paragraph:
-        'Fundada por profissionais de saúde que testemunharam em primeira mão as lacunas no acesso aos cuidados de saúde da mulher, a Eleva Care surgiu como uma solução tecnológica para conectar pacientes com profissionais especializados de forma mais eficiente.',
+        'A Eleva Care nasceu de uma ideia simples: cuidados especializados devem ser mais fáceis de alcançar. Fundadores e conselheiros viram as lacunas—e criaram uma forma melhor de a ligar a profissionais de confiança.',
     },
     {
       paragraph:
-        'Hoje, a Eleva Care opera um marketplace digital seguro que conecta mulheres com profissionais de saúde independentes e licenciados. A nossa plataforma fornece a tecnologia; o seu profissional escolhido presta os seus cuidados médicos.',
+        'Hoje, a Eleva Care opera um marketplace digital seguro que liga mulheres a profissionais independentes e licenciados. Nós fornecemos a tecnologia; o(a) profissional que escolhe presta os seus cuidados.',
     },
   ]}
   ctaText="Leia a nossa história"
@@ -112,7 +111,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   id="board-of-advisors"
   label="Orientados por especialistas da indústria"
   title="Conselho Consultivo"
-  description="O nosso conselho consultivo reúne vozes líderes em saúde da mulher, inovação em cuidados de saúde e transformação digital."
+  description="O nosso conselho reúne líderes em saúde da mulher, inovação e evidência clínica."
 />
 
 <AdvisorsSection
@@ -123,7 +122,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇳🇴',
       role: 'Conselheira em Saúde do Pavimento Pélvico',
       quote:
-        'O treino baseado em evidências dos músculos do pavimento pélvico não só previne e trata disfunções—capacita as mulheres a viver com confiança e plenamente em todas as etapas da vida.',
+        'O treino baseado em evidência do pavimento pélvico não só previne e trata disfunções—capacita as mulheres a viver com confiança em cada etapa.',
       image: '/img/about/team/team-kari-bo.jpg',
     },
         {
@@ -131,7 +130,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇦🇷 🇪🇸',
       role: 'Conselheiro em Ciência do Exercício',
       quote:
-        'A evidência mostra que o exercício personalizado durante a gravidez pode transformar os resultados de saúde das mulheres.',
+        'A evidência mostra que o exercício personalizado durante a gravidez pode transformar a saúde das mulheres.',
       image: '/img/about/team/team-ruben-barakat.jpg',
     },
         {
@@ -139,39 +138,39 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇧🇷',
       role: 'Conselheiro em Fisioterapia Obstétrica',
       quote:
-        'A fisioterapia baseada em evidências transforma a experiência da gravidez e do parto, capacitando as mulheres em todas as etapas.',
+        'A fisioterapia baseada em evidência transforma a experiência da gravidez e do parto, capacitando as mulheres em cada etapa.',
       image: '/img/about/team/team-alexandre-delgado.jpg',
     },
     {
       name: 'Cristine Homsi Jorge, PT, PhD',
       flags: '🇧🇷',
-      role: "Conselheira em Saúde da Mulher",
+      role: 'Conselheira em Saúde da Mulher',
       quote:
-        'A investigação clínica e a educação capacitam as mulheres a tomar decisões informadas sobre a sua jornada de saúde',
+        'A investigação clínica e a educação capacitam as mulheres para tomar decisões informadas sobre a sua saúde.',
       image: '/img/about/team/team-cristine-homsi-jorge.jpg',
     },
  {
       name: 'Annelie Gutke, PT, PhD',
       flags: '🇸🇪',
-      role: "Conselheira em Saúde da Mulher",
+      role: 'Conselheira em Saúde da Mulher',
       quote:
-        'Compreender os mecanismos da dor transforma como cuidamos das mulheres durante a gravidez e além.',
+        'Compreender a dor transforma como cuidamos das mulheres durante a gravidez e além.',
       image: '/img/about/team/team-annelie-gutke.jpg',
     },
        {
       name: 'Joana Goulão Barros, MD, PhD',
       flags: '🇵🇹',
-      role: 'Conselheira em Cuidados ao Longo da Vida da Mulher',
+      role: 'Conselheira em Cuidados ao Longo da Vida',
       quote:
-        'Cuidados integrados e em equipa em todas as etapas da vida—da adolescência à gravidez, parto e menopausa—garantem que as mulheres recebam o apoio personalizado de que precisam para prosperar.',
+        'Cuidados integrados e em equipa—da adolescência à gravidez, parto e menopausa—asseguram apoio personalizado para prosperar.',
       image: '/img/about/team/team-joana-barros.jpg',
     },
     {
       name: 'Patricia Driusso, PT, PhD',
       flags: '🇧🇷',
-      role: "Conselheira em Saúde da Mulher",
+      role: 'Conselheira em Saúde da Mulher',
       quote:
-        'A investigação clínica avança os tratamentos de reabilitação enquanto capacita as mulheres através da educação baseada em evidências.',
+        'A investigação clínica impulsiona a reabilitação e capacita através de educação baseada em evidência.',
       image: '/img/about/team/team-patricia-driusso.jpg',
     },
 
@@ -180,7 +179,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇺🇸',
       role: 'Conselheira em Biomecânica e Saúde Perinatal',
       quote:
-        'Compreender os padrões de movimento durante e após a gravidez ajuda a otimizar os cuidados e melhorar os resultados a longo prazo para as mulheres.',
+        'Compreender o movimento durante e após a gravidez ajuda a otimizar o cuidado e os resultados a longo prazo.',
       image: '/img/about/team/team-jenny-bagwell-california-usa.jpg',
     },
 
@@ -191,7 +190,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   id="join-our-network"
   label="Junte-se à nossa rede"
   title="Transforme os cuidados de saúde da mulher connosco"
-  description="Junte-se a uma comunidade de profissionais de saúde dedicados a tornar os cuidados de qualidade acessíveis a mulheres em todo o lado."
+  description="Junte-se a uma comunidade dedicada a tornar os cuidados de qualidade mais acessíveis."
 />
 
 <JoinNetworkSection
@@ -200,17 +199,16 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     {
       title: 'Prática Independente',
       description:
-        'Mantenha a sua independência como prestador de cuidados de saúde licenciado. Defina o seu próprio horário, tarifas e políticas de prática enquanto utiliza a nossa plataforma tecnológica.',
+        'Trabalhe nos seus termos com uma plataforma flexível e segura. Defina horários, tarifas e políticas.',
     },
     {
       title: 'Plataforma Tecnológica Segura',
       description:
-        'Aceda ao nosso sistema seguro de marcação, agendamento, processamento de pagamentos e armazenamento encriptado de notas clínicas. Fornecemos a tecnologia; você presta os cuidados médicos.',
+        'Use marcações, agenda, pagamentos e notas encriptadas—para se focar no cuidado. Nós fornecemos a tecnologia; você presta os cuidados.',
     },
     {
       title: 'Rede Profissional',
-      description:
-        'Conecte-se com outros profissionais de saúde independentes na nossa rede para oportunidades de desenvolvimento profissional e partilha de conhecimento.',
+      description: 'Ligue-se a pares para colaboração, aprendizagem e apoio.',
     },
   ]}
   applyUrl="mailto:patimota@gmail.com?subject=Candidatura%20para%20Eleva%20Care&body=Olá%20Patrícia,%20gostaria%20de%20me%20candidatar%20à%20Eleva%20Care."
