--- a/content/cookie/br.mdx
+++ b/content/cookie/br.mdx
@@ -1,175 +1,53 @@
 # Política de Cookies
 
-_Data de Vigência:_ 16 de abril de 2025
+_Data de vigência: 16 de abril de 2025_
 
-**IMPORTANTE**: A Eleva.care é uma **plataforma marketplace de tecnologia em saúde** que conecta pacientes com profissionais de saúde independentes e licenciados. NÃO somos um provedor de cuidados de saúde. Esta Política de Cookies explica como utilizamos cookies e tecnologias de rastreamento semelhantes em nossa plataforma.
+Usamos poucas cookies para que a Eleva.care funcione de forma confiável e segura. Aqui explicamos o que usamos e como você controla.
 
----
+## 1) O que (não) guardamos
 
-Como plataforma de saúde, levamos muito a sério a privacidade e transparência dos cookies. Esta Política de Cookies explica como utilizamos cookies e tecnologias de rastreamento semelhantes em nosso site e plataforma, com especial atenção à proteção de dados de saúde. Também explica como gerenciamos o consentimento de cookies para garantir sua privacidade e o cumprimento dos regulamentos relevantes.
+- Nunca guardamos dados clínicos ou de saúde em cookies
+- Cookies servem apenas para recursos da plataforma, segurança, preferências e analytics mínimo
 
-## 1. O Que São Cookies?
+## 2) Tipos de cookies
 
-Cookies são pequenos arquivos de texto que são armazenados no seu dispositivo quando você visita um site. Eles servem vários propósitos, incluindo:
+- Essenciais: sessão/autenticação, segurança (CSRF/fraude), balanceamento
+- Funcionais: idioma, tema, preferências de interface
+- Analíticas (mínimas, PostHog UE): desempenho, erros, tendências (agregado/anonimizado)
 
-- Lembrar suas preferências e configurações
-- Entender como você interage com sites
-- Ajudar com segurança e verificação de login
-- Permitir certas funcionalidades do site
-- Suportar processos de autenticação seguros
+## 3) Duração
 
-## 2. Dados de Saúde e Cookies
+- Sessão: removidas ao fechar o navegador
+- Persistentes: normalmente até 12 meses (muitas vezes menos)
 
-Entendemos a natureza sensível das informações relacionadas à saúde:
+## 4) Consentimento e controle
 
-- Nenhum dado clínico ou informação do paciente é jamais armazenado em cookies
-- Não utilizamos cookies para rastrear comportamentos ou condições relacionadas à saúde
-- Nosso uso de cookies é separado do armazenamento criptografado de informações de saúde
-- Os dados de cookies nunca são combinados com informações clínicas armazenadas em nossos sistemas
+- Cookies não essenciais só carregam após consentimento
+- Ajuste escolhas em “Preferências de Cookies” (rodapé)
+- Também é possível gerenciar no navegador
 
-## 3. Tipos de Cookies Que Utilizamos
+## 5) Fornecedores (podem definir cookies)
 
-### Cookies Essenciais
+- Autenticação/identidade: Clerk (opções UE)
+- Pagamentos: Stripe (PCI DSS L1)
+- Analytics: PostHog (hospedagem UE)
+- Email/notificações/infra (endpoints/regiões UE): Resend, Novu, Vercel, Upstash
 
-Estes cookies são necessários para o nosso site funcionar corretamente e não podem ser desativados:
+Todos com DPA/SCC conforme aplicável e suporte à hospedagem na UE.
 
-- Cookies de autenticação para gerenciar sessões de usuário e estado de login seguro
-- Cookies de segurança para prevenir fraudes e proteger nosso serviço
-- Cookies técnicos necessários para a funcionalidade central da nossa plataforma
-- Cookies de balanceamento de carga para desempenho ideal
+## 6) Local dos dados
 
-### Cookies Funcionais
+Priorizamos residência na UE. Dados relacionados a cookies são processados em regiões UE quando possível; caso contrário, aplicamos SCCs e medidas suplementares.
 
-Estes cookies permitem funcionalidades melhoradas, mas não são estritamente necessários:
+## 7) Mudar de decisão
 
-- Preferências de idioma
-- Preferências de tema (modo claro/escuro)
-- Configurações de personalização da interface do usuário
-- Preferências salvas para formulários e funcionalidades
+- Abra “Preferências de Cookies” no rodapé para ajustar categorias
+- Bloquear cookies essenciais pode afetar login e recursos básicos
 
-### Cookies Analíticos
+## 8) Atualizações
 
-Utilizamos análises mínimas através do PostHog para melhorar nosso serviço:
-
-- Estatísticas de uso anônimas com princípios de minimização de dados aplicados
-- Monitoramento de desempenho da funcionalidade do site
-- Rastreamento de erros para melhoria do serviço
-- Análise de fluxo de usuário para otimizar a experiência da plataforma
-
-Todos os dados analíticos são anonimizados e agregados. Os usuários individuais não podem ser pessoalmente identificados através da nossa implementação analítica.
-
-## 4. Duração dos Cookies
-
-### Cookies de Sessão
-
-Cookies temporários que expiram quando você fecha o seu navegador. Estes são utilizados principalmente para funções essenciais como manter sessões de login.
-
-### Cookies Persistentes
-
-Cookies que permanecem no seu dispositivo por um período estabelecido. Limitamos os cookies persistentes a um máximo de 12 meses, conforme recomendado pelos regulamentos de privacidade, com a maioria expirando muito antes.
-
-## 5. Nossa Solução de Consentimento de Cookies
-
-Utilizamos o CookieKit para garantir transparência e controle sobre cookies:
-
-- Obter consentimento explícito antes de definir cookies não essenciais
-- Bloquear todos os cookies não essenciais até obter consentimento
-- Fornecer controle granular sobre preferências de cookies por categoria
-- Permitir a retirada fácil do consentimento a qualquer momento
-- Manter registros detalhados de consentimento para fins de conformidade
-- Atualizar preferências de consentimento em tempo real em toda a nossa plataforma
-
-Os registros de consentimento (incluindo categorias aceitas/recusadas) são mantidos por até 13 meses. Você pode reabrir o modal de **Preferências de Cookies** no rodapé a qualquer momento para alterar suas escolhas.
-
-## 6. Melhores Práticas da Indústria de Saúde
-
-Como plataforma que serve à indústria de saúde, seguimos estas práticas adicionais:
-
-- Implementamos uma abordagem de "privacidade por padrão", minimizando o uso de cookies
-- Auditamos regularmente nosso uso de cookies para garantir a conformidade com os padrões de privacidade de saúde
-- Separamos os dados analíticos de quaisquer informações relacionadas à saúde
-- Garantimos que todos os fornecedores de cookies de terceiros cumprem os regulamentos relevantes de proteção de dados
-
-## 7. Gerenciamento de Preferências de Cookies
-
-Você pode gerenciar suas preferências de cookies de várias maneiras:
-
-- Utilizando nosso banner de consentimento de cookies na primeira visita
-- Através das configurações do seu navegador (instruções para navegadores comuns fornecidas abaixo)
-- Através do nosso centro de preferências (acessível através do botão "Preferências de Cookies" no rodapé)
-- Contatando nossa equipe de suporte
-
-**Configurações do Navegador:**
-
-- **Chrome**: Configurações > Privacidade e segurança > Cookies e outros dados do site
-- **Firefox**: Opções > Privacidade e Segurança > Cookies e dados do site
-- **Safari**: Preferências > Privacidade > Cookies e dados do site
-- **Edge**: Configurações > Cookies e permissões do site > Cookies
-
-**Nota:** Bloquear cookies essenciais pode afetar a funcionalidade do nosso site e plataforma, incluindo funcionalidades de segurança.
+Auditamos cookies regularmente e podemos atualizar esta política. Indicaremos mudanças aqui e notificaremos alterações materiais.
 
 ---
 
-## 11. Detalhes de Cookies
-
-A tabela a seguir descreve os principais cookies usados em nossa plataforma. Os nomes e durações exatos podem variar por ambiente e dispositivo. O modal de Preferências de Cookies sempre contém a lista autoritativa.
-
-| Nome (exemplo)               | Provedor   | Finalidade                                | Categoria  | Duração        | Tipo                  |
-| ---------------------------- | ---------- | ----------------------------------------- | ---------- | -------------- | --------------------- |
-| `clerk.session` / `__client` | Clerk      | Gestão de sessão e autenticação segura    | Essenciais | Sessão         | First-party HTTP-only |
-| `clerk.csrf`                 | Clerk      | Proteção CSRF para fluxos de autenticação | Essenciais | Sessão         | First-party           |
-| `ph_*_posthog`               | PostHog    | Analytics de uso anônimo                  | Analíticos | Até 12 meses   | First-party           |
-| `__stripe_mid`               | Stripe     | Prevenção de fraude e gestão de risco     | Essenciais | Até 12 meses   | Third-party           |
-| `__stripe_sid`               | Stripe     | Prevenção de fraude (sessão)              | Essenciais | Até 30 minutos | Third-party           |
-| `locale`                     | Eleva.care | Lembrar preferência de idioma             | Funcionais | Até 12 meses   | First-party           |
-
-Minimizamos cookies de terceiros e exigimos de todos os provedores conformidade com GDPR/LGPD, execução de APD/SCC quando aplicável e hospedagem na UE quando possível.
-
-## 8. Cookies de Terceiros
-
-Minimizamos o uso de cookies de terceiros. Quando necessário, garantimos que nossos parceiros cumprem os regulamentos relevantes de proteção de dados e mantêm práticas de privacidade transparentes. Nossos serviços de terceiros incluem:
-
-- **Clerk** para autenticação e gestão de identidade de usuários
-- **Stripe** para processamento de pagamentos (processamento na UE)
-- **PostHog** para estatísticas mínimas de uso e análises (hospedagem na UE)
-- **Beehiiv** para gerenciamento de inscrições de newsletter
-- **Novu** (Noti-Fire Apps Ltd.) para serviços de notificação (endpoint da API na UE: eu.api.novu.co)
-- **Vercel** para hospedagem e infraestrutura da plataforma (regiões da UE)
-
-Cada um destes fornecedores foi selecionado com base em suas práticas de segurança e conformidade com os padrões de proteção de dados relevantes para aplicações de saúde. Todos os fornecedores executaram Acordos de Processamento de Dados (APD) e utilizam data centers na UE para hospedagem e processamento.
-
-## 9. Processamento e Armazenamento de Dados
-
-**Residência de Dados na UE:** Todos os dados de cookies são armazenados e processados dentro da União Europeia. Não transferimos dados de cookies fora do EEE durante operações normais.
-
-**Localização de Dados:** Nossa infraestrutura está hospedada exclusivamente em regiões da UE:
-
-- Banco de dados: Frankfurt, Alemanha (UE)
-- Hospedagem: Vercel regiões da UE
-- Análise: PostHog hospedagem na UE
-- Notificações: Novu endpoint da API na UE
-
-Embora alguns prestadores de serviços sejam empresas baseadas nos EUA, fornecem **infraestrutura hospedada na UE** com residência de dados na União Europeia e executaram Cláusulas Contratuais Padrão (SCC) para conformidade com o GDPR.
-
-## 10. Auditorias Regulares de Cookies
-
-Realizamos auditorias regulares do nosso uso de cookies para:
-
-- Identificar e remover cookies desnecessários
-- Verificar a conformidade com os regulamentos de proteção de dados
-- Garantir a precisão das descrições de cookies nesta política
-- Minimizar a coleta de dados apenas para o necessário
-
-**Atualizações a Esta Política:** Podemos atualizar esta Política de Cookies para refletir mudanças em nossas práticas ou para conformidade legal. Notificaremos sobre quaisquer alterações materiais e atualizaremos a data de "Data de Vigência" de acordo. Alterações significativas também podem ser anunciadas através de um banner em nosso site.
-
----
-
-## Quem é Responsável por Esta Política de Cookies?
-
-Esta Política de Cookies é gerenciada e mantida por:
-
-- **BÚZIOS E TARTARUGAS - LDA**
-- Nome comercial: **Eleva.care**
-- NIPC/VAT: 515001708
-- Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- Email: [support@eleva.care](mailto:support@eleva.care)
+Dúvidas: `support@eleva.care`.
