--- a/content/cookie/es.mdx
+++ b/content/cookie/es.mdx
@@ -1,175 +1,53 @@
 # Política de Cookies
 
-_Fecha de Vigencia:_ 16 de abril de 2025
+_Fecha de vigencia: 16 de abril de 2025_
 
-**IMPORTANTE**: Eleva.care es una **plataforma marketplace tecnológica de salud** que conecta pacientes con profesionales de salud independientes y licenciados. NO somos un proveedor de atención médica. Esta Política de Cookies explica cómo utilizamos cookies y tecnologías similares de seguimiento en nuestra plataforma.
+Usamos pocas cookies para que Eleva.care funcione de forma fiable y segura. Aquí explicamos qué usamos y cómo controlarlo.
 
----
+## 1) Lo que (no) guardamos
 
-Como plataforma de atención médica, nos tomamos muy en serio la privacidad y transparencia de las cookies. Esta Política de Cookies explica cómo utilizamos cookies y tecnologías similares de seguimiento en nuestro sitio web y plataforma, con especial atención a la protección de datos sanitarios. También explica cómo gestionamos el consentimiento de cookies para garantizar su privacidad y el cumplimiento de las normativas pertinentes.
+- Nunca guardamos datos clínicos o de salud en cookies
+- Las cookies se usan solo para funciones de plataforma, seguridad, preferencias y analítica mínima
 
-## 1. ¿Qué Son las Cookies?
+## 2) Tipos de cookies
 
-Las cookies son pequeños archivos de texto que se almacenan en su dispositivo cuando visita un sitio web. Sirven para diversos propósitos, incluyendo:
+- Esenciales: inicio de sesión/sesión, seguridad (CSRF/fraude), balanceo de carga
+- Funcionales: idioma, tema, preferencias de interfaz
+- Analíticas (mínimas, PostHog en la UE): rendimiento, errores, tendencias (agregado/anonimizado)
 
-- Recordar sus preferencias y configuraciones
-- Entender cómo interactúa con los sitios web
-- Ayudar con la seguridad y verificación de inicio de sesión
-- Habilitar ciertas funcionalidades del sitio web
-- Soportar procesos seguros de autenticación
+## 3) Duración
 
-## 2. Datos Sanitarios y Cookies
+- Sesión: se eliminan al cerrar el navegador
+- Persistentes: normalmente hasta 12 meses (a menudo menos)
 
-Entendemos la naturaleza sensible de la información relacionada con la salud:
+## 4) Consentimiento y control
 
-- Ningún dato clínico o información del paciente se almacena jamás en cookies
-- No utilizamos cookies para rastrear comportamientos o condiciones relacionadas con la salud
-- Nuestro uso de cookies está separado del almacenamiento encriptado de información sanitaria
-- Los datos de cookies nunca se combinan con información clínica almacenada en nuestros sistemas
+- Las no esenciales cargan solo tras su consentimiento
+- Puede cambiar su elección en “Preferencias de Cookies” (en el pie)
+- También puede gestionarlas en la configuración del navegador
 
-## 3. Tipos de Cookies que Utilizamos
+## 5) Proveedores (pueden establecer cookies)
 
-### Cookies Esenciales
+- Autenticación/identidad: Clerk (opciones UE)
+- Pagos: Stripe (PCI DSS L1)
+- Analítica: PostHog (hosting UE)
+- Email/notificaciones/infra (endpoints/regiones UE): Resend, Novu, Vercel, Upstash
 
-Estas cookies son necesarias para que nuestro sitio web funcione correctamente y no pueden desactivarse:
+Todos bajo DPA/SCC según corresponda y con soporte de hosting en la UE.
 
-- Cookies de autenticación para gestionar sesiones de usuario y estado de inicio de sesión seguro
-- Cookies de seguridad para prevenir fraudes y proteger nuestro servicio
-- Cookies técnicas requeridas para la funcionalidad central de nuestra plataforma
-- Cookies de balanceo de carga para un rendimiento óptimo
+## 6) Ubicación de datos
 
-### Cookies Funcionales
+Priorizamos residencia en la UE. Los datos vinculados a cookies se procesan en regiones UE cuando sea posible; si no, aplicamos SCCs y medidas adicionales.
 
-Estas cookies permiten funcionalidades mejoradas pero no son estrictamente necesarias:
+## 7) Cambiar de opinión
 
-- Preferencias de idioma
-- Preferencias de tema (modo claro/oscuro)
-- Configuraciones de personalización de la interfaz de usuario
-- Preferencias guardadas para formularios y funcionalidades
+- Abra “Preferencias de Cookies” en el pie para ajustar categorías
+- Bloquear cookies esenciales puede afectar inicio de sesión y funciones básicas
 
-### Cookies Analíticas
+## 8) Actualizaciones
 
-Utilizamos análisis mínimos a través de PostHog para mejorar nuestro servicio:
-
-- Estadísticas de uso anónimas con principios de minimización de datos aplicados
-- Monitoreo de rendimiento de la funcionalidad del sitio
-- Seguimiento de errores para mejorar el servicio
-- Análisis de flujo de usuario para optimizar la experiencia de la plataforma
-
-Todos los datos analíticos son anonimizados y agregados. Los usuarios individuales no pueden ser identificados personalmente a través de nuestra implementación analítica.
-
-## 4. Duración de las Cookies
-
-### Cookies de Sesión
-
-Cookies temporales que caducan cuando cierra su navegador. Estas se utilizan principalmente para funciones esenciales como mantener sesiones de inicio de sesión.
-
-### Cookies Persistentes
-
-Cookies que permanecen en su dispositivo por un período establecido. Limitamos las cookies persistentes a un máximo de 12 meses, según lo recomendado por las regulaciones de privacidad, con la mayoría caducando mucho antes.
-
-## 5. Nuestra Solución de Consentimiento de Cookies
-
-Utilizamos CookieKit para garantizar transparencia y control sobre las cookies:
-
-- Obtener consentimiento explícito antes de establecer cookies no esenciales
-- Bloquear todas las cookies no esenciales hasta obtener consentimiento
-- Proporcionar control granular sobre preferencias de cookies por categoría
-- Permitir la retirada fácil del consentimiento en cualquier momento
-- Mantener registros detallados de consentimiento para fines de cumplimiento
-- Actualizar preferencias de consentimiento en tiempo real en toda nuestra plataforma
-
-Los registros de consentimiento (incluidas las categorías aceptadas/rechazadas) se conservan hasta 13 meses. Puede reabrir el modal de **Preferencias de Cookies** desde el pie de página en cualquier momento para cambiar sus elecciones.
-
-## 6. Mejores Prácticas de la Industria Sanitaria
-
-Como plataforma que sirve a la industria sanitaria, seguimos estas prácticas adicionales:
-
-- Implementamos un enfoque de "privacidad por defecto", minimizando el uso de cookies
-- Auditamos regularmente nuestro uso de cookies para garantizar el cumplimiento de los estándares de privacidad sanitaria
-- Separamos los datos analíticos de cualquier información relacionada con la salud
-- Aseguramos que todos los proveedores de cookies de terceros cumplan con las regulaciones relevantes de protección de datos
-
-## 7. Gestión de Preferencias de Cookies
-
-Puede gestionar sus preferencias de cookies de varias maneras:
-
-- Utilizando nuestro banner de consentimiento de cookies en la primera visita
-- A través de la configuración de su navegador (instrucciones para navegadores comunes proporcionadas a continuación)
-- A través de nuestro centro de preferencias (accesible mediante el botón "Preferencias de Cookies" en el pie de página)
-- Contactando a nuestro equipo de soporte
-
-**Configuración del Navegador:**
-
-- **Chrome**: Configuración > Privacidad y seguridad > Cookies y otros datos del sitio
-- **Firefox**: Opciones > Privacidad y Seguridad > Cookies y datos del sitio
-- **Safari**: Preferencias > Privacidad > Cookies y datos del sitio web
-- **Edge**: Configuración > Cookies y permisos del sitio > Cookies
-
-**Nota:** Bloquear cookies esenciales puede afectar la funcionalidad de nuestro sitio web y plataforma, incluidas las características de seguridad.
+Revisamos cookies con regularidad y podemos actualizar esta política. Reflejaremos cambios aquí y avisaremos si son materiales.
 
 ---
 
-## 11. Detalle de Cookies
-
-La siguiente tabla describe las cookies principales usadas en nuestra plataforma. Los nombres y duraciones exactas pueden variar por entorno y dispositivo. El modal de Preferencias de Cookies contiene siempre la lista autoritativa.
-
-| Nombre (ejemplo)             | Proveedor  | Finalidad                                    | Categoría   | Duración         | Tipo                  |
-| ---------------------------- | ---------- | -------------------------------------------- | ----------- | ---------------- | --------------------- |
-| `clerk.session` / `__client` | Clerk      | Gestión de sesión y autenticación segura     | Esenciales  | Sesión           | First-party HTTP-only |
-| `clerk.csrf`                 | Clerk      | Protección CSRF para flujos de autenticación | Esenciales  | Sesión           | First-party           |
-| `ph_*_posthog`               | PostHog    | Analítica de uso anónima                     | Analíticas  | Hasta 12 meses   | First-party           |
-| `__stripe_mid`               | Stripe     | Prevención de fraude y gestión de riesgos    | Esenciales  | Hasta 12 meses   | Third-party           |
-| `__stripe_sid`               | Stripe     | Prevención de fraude (sesión)                | Esenciales  | Hasta 30 minutos | Third-party           |
-| `locale`                     | Eleva.care | Recordar preferencia de idioma               | Funcionales | Hasta 12 meses   | First-party           |
-
-Minimizamos cookies de terceros y exigimos a todos los proveedores el cumplimiento RGPD/LGPD, ejecución de APD/CCT cuando proceda y alojamiento en la UE cuando sea aplicable.
-
-## 8. Cookies de Terceros
-
-Minimizamos el uso de cookies de terceros. Cuando se requieren, nos aseguramos de que nuestros socios cumplan con las regulaciones relevantes de protección de datos y mantengan prácticas de privacidad transparentes. Nuestros servicios de terceros incluyen:
-
-- **Clerk** para autenticación y gestión de identidad de usuarios
-- **Stripe** para procesamiento de pagos (procesamiento en la UE)
-- **PostHog** para estadísticas mínimas de uso y análisis (alojamiento en la UE)
-- **Beehiiv** para gestión de suscripciones al boletín
-- **Novu** (Noti-Fire Apps Ltd.) para servicios de notificación (endpoint de API en la UE: eu.api.novu.co)
-- **Vercel** para alojamiento e infraestructura de la plataforma (regiones de la UE)
-
-Cada uno de estos proveedores ha sido seleccionado en base a sus prácticas de seguridad y cumplimiento de los estándares de protección de datos relevantes para aplicaciones sanitarias. Todos los proveedores han ejecutado Acuerdos de Procesamiento de Datos (APD) y utilizan centros de datos en la UE para alojamiento y procesamiento.
-
-## 9. Procesamiento y Almacenamiento de Datos
-
-**Residencia de Datos en la UE:** Todos los datos de cookies se almacenan y procesan dentro de la Unión Europea. No transferimos datos de cookies fuera del EEE durante las operaciones normales.
-
-**Ubicación de Datos:** Nuestra infraestructura está alojada exclusivamente en regiones de la UE:
-
-- Base de datos: Frankfurt, Alemania (UE)
-- Alojamiento: Vercel regiones de la UE
-- Análisis: PostHog alojamiento en la UE
-- Notificaciones: Novu endpoint de API en la UE
-
-Aunque algunos proveedores de servicios son empresas con sede en EE.UU., proporcionan **infraestructura alojada en la UE** con residencia de datos en la Unión Europea y han ejecutado Cláusulas Contractuales Tipo (CCT) para cumplimiento del RGPD.
-
-## 10. Auditorías Regulares de Cookies
-
-Realizamos auditorías regulares de nuestro uso de cookies para:
-
-- Identificar y eliminar cookies innecesarias
-- Verificar el cumplimiento de las regulaciones de protección de datos
-- Asegurar la precisión de las descripciones de cookies en esta política
-- Minimizar la recopilación de datos a solo lo necesario
-
-**Actualizaciones a Esta Política:** Podemos actualizar esta Política de Cookies para reflejar cambios en nuestras prácticas o para cumplimiento legal. Le notificaremos de cualquier cambio material y actualizaremos la fecha de "Fecha de Vigencia" en consecuencia. Cambios significativos también pueden ser anunciados a través de un banner en nuestro sitio web.
-
----
-
-## ¿Quién es Responsable de Esta Política de Cookies?
-
-Esta Política de Cookies es gestionada y mantenida por:
-
-- **BÚZIOS E TARTARUGAS - LDA**
-- Nombre comercial: **Eleva.care**
-- NIPC/VAT: 515001708
-- Rua Gil Vicente, 2, 2775-198 Parede, Portugal
-- Email: [support@eleva.care](mailto:support@eleva.care)
+Dudas: `support@eleva.care`.
