--- a/content/about/br.mdx
+++ b/content/about/br.mdx
@@ -14,8 +14,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="transforming-women-healthcare"
   headingLevel="h1"
-  title="Conectando você com profissionais de saúde especializados em saúde da mulher"
-  description="Na Eleva Care, fornecemos uma plataforma tecnológica segura que capacita as mulheres a encontrar e conectar-se com profissionais de saúde licenciados para atendimento personalizado."
+  title="Transformando a saúde da mulher com acolhimento e cuidado baseado em evidências"
+  description="Estamos aqui para facilitar o acesso ao cuidado certo, no momento certo. A Eleva Care conecta você a profissionais licenciados por meio de uma plataforma segura e confiável."
 />
 
 <MissionSection
@@ -23,11 +23,11 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   description={[
     {
       paragraph:
-        'Nossa missão é fornecer um marketplace tecnológico seguro que conecta mulheres com profissionais de saúde independentes e licenciados. Oferecemos a plataforma e as ferramentas; profissionais de saúde qualificados prestam seus cuidados médicos.',
+        'Acreditamos que toda mulher merece cuidado especializado e humano. Nossa plataforma ajuda você a encontrar profissionais independentes e licenciados em quem pode confiar—para que se sinta amparada em cada etapa.',
     },
     {
       paragraph:
-        'Acreditamos que a tecnologia pode tornar os cuidados de saúde de qualidade mais acessíveis. Ao conectar pacientes com profissionais verificados através de nossa plataforma, capacitamos as mulheres com escolha, conveniência e acesso a atendimento especializado em todas as etapas da vida.',
+        'Nós fornecemos a tecnologia que torna o acesso ao cuidado mais simples. O profissional que você escolhe oferece o atendimento. Juntos, ajudamos você a seguir em frente com confiança.',
     },
   ]}
   statsTitle="Os números"
@@ -40,33 +40,32 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="our-vision"
   label="Nossa Visão"
-  title="Conectando mulheres com profissionais de saúde especializados"
-  description="Ser a plataforma tecnológica líder que conecta mulheres com profissionais de saúde licenciados, tornando o atendimento especializado acessível e conveniente em todas as etapas da vida."
+  title="Aproximamos ciência e cuidado—para que o apoio seja pessoal"
+  description="Trazemos a expertise certa até você—tornando o cuidado especializado mais acessível em todas as fases da vida."
 />
 
 <BeliefsSection
   id="our-beliefs"
-  title="Nossas Convicções"
+  title="Nossas Crenças"
   beliefs={[
     {
-      title: 'Acesso a Cuidados de Saúde de Qualidade',
+      title: 'Acesso a Cuidados de Qualidade',
       description:
-        'Toda mulher merece acesso a cuidados de saúde de qualidade, independentemente da localização ou circunstâncias.',
+        'Toda mulher merece acesso a cuidados de qualidade, independentemente da sua realidade.',
     },
     {
       title: 'Conhecimento é Poder',
-      description:
-        'Capacitar as mulheres com informação baseada em evidências para tomar decisões informadas sobre cuidados de saúde.',
+      description: 'Informação clara e baseada em evidências para decidir com confiança.',
     },
     {
-      title: 'Atendimento Colaborativo',
+      title: 'Cuidado Colaborativo',
       description:
-        'Melhores resultados de saúde são alcançados através da colaboração entre pacientes e prestadores de cuidados de saúde.',
+        'Melhores resultados acontecem quando trabalhamos ao lado de profissionais de confiança.',
     },
     {
-      title: 'Jornada para a Vida',
+      title: 'Uma Jornada para a Vida',
       description:
-        'A saúde da mulher é uma jornada contínua que evolui através de diferentes etapas da vida.',
+        'A saúde da mulher muda ao longo do tempo—estamos aqui para acompanhar você em cada etapa.',
     },
   ]}
 />
@@ -74,19 +73,19 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="our-team"
   label="Conheça nossa equipe"
-  title="Liderados por inovadores e especialistas em saúde"
-  description="Nossa equipe combina experiência em saúde da mulher, tecnologia e atendimento ao paciente para revolucionar a prestação de cuidados de saúde."
+  title="Liderados por inovadores e especialistas com empatia"
+  description="Nossa equipe reúne saúde da mulher, tecnologia e cuidado—para que você se sinta amparada, informada e cuidada."
 />
 
 <TeamSection
   description={[
     {
       paragraph:
-        'Fundada por profissionais de saúde que testemunharam em primeira mão as lacunas no acesso aos cuidados de saúde da mulher, a Eleva Care surgiu como uma solução tecnológica para conectar pacientes com profissionais especializados de forma mais eficiente.',
+        'A Eleva Care nasceu de uma ideia simples: cuidado especializado precisa ser mais fácil de alcançar. Nossos fundadores e conselheiros viram as lacunas—e criaram um jeito melhor de conectar você a profissionais de confiança.',
     },
     {
       paragraph:
-        'Hoje, a Eleva Care opera um marketplace digital seguro que conecta mulheres com profissionais de saúde independentes e licenciados. Nossa plataforma fornece a tecnologia; seu profissional escolhido presta seus cuidados médicos.',
+        'Hoje, a Eleva Care opera um marketplace digital seguro que conecta mulheres a profissionais independentes e licenciados. Nós fornecemos a tecnologia; o profissional que você escolhe oferece o atendimento.',
     },
   ]}
   ctaText="Leia nossa história"
@@ -112,7 +111,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   id="board-of-advisors"
   label="Orientados por especialistas da indústria"
   title="Conselho de Assessores"
-  description="Nosso conselho consultivo reúne vozes líderes em saúde da mulher, inovação em cuidados de saúde e transformação digital."
+  description="Nosso conselho reúne líderes em saúde da mulher, inovação e evidência clínica."
 />
 
 <AdvisorsSection
@@ -123,7 +122,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇳🇴',
       role: 'Assessora em Saúde do Assoalho Pélvico',
       quote:
-        'O treinamento baseado em evidências dos músculos do assoalho pélvico não só previne e trata disfunções—capacita as mulheres a viver com confiança e plenamente em todas as etapas da vida.',
+        'O treino baseado em evidências do assoalho pélvico não só previne e trata disfunções—empodera as mulheres a viver com confiança em cada etapa.',
       image: '/img/about/team/team-kari-bo.jpg',
     },
         {
@@ -131,7 +130,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇦🇷 🇪🇸',
       role: 'Assessor em Ciência do Exercício',
       quote:
-        'A evidência mostra que o exercício personalizado durante a gravidez pode transformar os resultados de saúde das mulheres.',
+        'A evidência mostra que o exercício personalizado na gestação pode transformar a saúde das mulheres.',
       image: '/img/about/team/team-ruben-barakat.jpg',
     },
         {
@@ -139,39 +138,39 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇧🇷',
       role: 'Assessor em Fisioterapia Obstétrica',
       quote:
-        'A fisioterapia baseada em evidências transforma a experiência da gravidez e do parto, capacitando as mulheres em todas as etapas.',
+        'A fisioterapia baseada em evidências transforma a experiência da gestação e do parto, fortalecendo as mulheres em cada fase.',
       image: '/img/about/team/team-alexandre-delgado.jpg',
     },
     {
       name: 'Cristine Homsi Jorge, PT, PhD',
       flags: '🇧🇷',
-      role: "Assessora em Saúde da Mulher",
+      role: 'Assessora em Saúde da Mulher',
       quote:
-        'A pesquisa clínica e a educação capacitam as mulheres a tomar decisões informadas sobre sua jornada de saúde',
+        'Pesquisa clínica e educação empoderam escolhas informadas em cada jornada de saúde.',
       image: '/img/about/team/team-cristine-homsi-jorge.jpg',
     },
  {
       name: 'Annelie Gutke, PT, PhD',
       flags: '🇸🇪',
-      role: "Assessora em Saúde da Mulher",
+      role: 'Assessora em Saúde da Mulher',
       quote:
-        'Compreender os mecanismos da dor transforma como cuidamos das mulheres durante a gravidez e além.',
+        'Entender a dor transforma como cuidamos de mulheres na gestação e além.',
       image: '/img/about/team/team-annelie-gutke.jpg',
     },
        {
       name: 'Joana Goulão Barros, MD, PhD',
       flags: '🇵🇹',
-      role: 'Assessora em Atendimento ao Longo da Vida da Mulher',
+      role: 'Assessora em Cuidado ao Longo da Vida',
       quote:
-        'Atendimento integrado e em equipe em todas as etapas da vida—da adolescência à gravidez, parto e menopausa—garante que as mulheres recebam o apoio personalizado de que precisam para prosperar.',
+        'Cuidado contínuo e em equipe—da adolescência à gestação, parto e menopausa—garante apoio personalizado para prosperar.',
       image: '/img/about/team/team-joana-barros.jpg',
     },
     {
       name: 'Patricia Driusso, PT, PhD',
       flags: '🇧🇷',
-      role: "Assessora em Saúde da Mulher",
+      role: 'Assessora em Saúde da Mulher',
       quote:
-        'A pesquisa clínica avança os tratamentos de reabilitação enquanto capacita as mulheres através da educação baseada em evidências.',
+        'Pesquisa clínica fortalece a reabilitação e empodera por meio de educação baseada em evidências.',
       image: '/img/about/team/team-patricia-driusso.jpg',
     },
 
@@ -180,7 +179,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
       flags: '🇺🇸',
       role: 'Assessora em Biomecânica e Saúde Perinatal',
       quote:
-        'Compreender os padrões de movimento durante e após a gravidez ajuda a otimizar os cuidados e melhorar os resultados a longo prazo para as mulheres.',
+        'Compreender o movimento durante e após a gestação ajuda a otimizar o cuidado e resultados a longo prazo.',
       image: '/img/about/team/team-jenny-bagwell-california-usa.jpg',
     },
 
@@ -190,8 +189,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="join-our-network"
   label="Junte-se à nossa rede"
-  title="Transforme os cuidados de saúde da mulher conosco"
-  description="Junte-se a uma comunidade de profissionais de saúde dedicados a tornar os cuidados de qualidade acessíveis a mulheres em todo lugar."
+  title="Transforme a saúde da mulher conosco"
+  description="Junte-se a uma comunidade dedicada a tornar o cuidado de qualidade mais acessível."
 />
 
 <JoinNetworkSection
@@ -200,17 +199,16 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     {
       title: 'Prática Independente',
       description:
-        'Mantenha sua independência como prestador de cuidados de saúde licenciado. Defina seu próprio horário, tarifas e políticas de prática enquanto usa nossa plataforma tecnológica.',
+        'Trabalhe nos seus termos com uma plataforma flexível e segura. Defina horários, tarifas e políticas.',
     },
     {
       title: 'Plataforma Tecnológica Segura',
       description:
-        'Acesse nosso sistema seguro de agendamento, programação, processamento de pagamentos e armazenamento criptografado de notas clínicas. Fornecemos a tecnologia; você presta os cuidados médicos.',
+        'Use agendamento, agenda, pagamentos e notas criptografadas—para focar no cuidado. Nós fornecemos a tecnologia; você presta o atendimento.',
     },
     {
       title: 'Rede Profissional',
-      description:
-        'Conecte-se com outros profissionais de saúde independentes em nossa rede para oportunidades de desenvolvimento profissional e compartilhamento de conhecimento.',
+      description: 'Conecte-se a pares para colaboração, aprendizado e apoio.',
     },
   ]}
   applyUrl="mailto:patimota@gmail.com?subject=Candidatura%20para%20Eleva%20Care&body=Olá%20Patrícia,%20gostaria%20de%20me%20candidatar%20à%20Eleva%20Care."
