--- a/content/about/en.mdx
+++ b/content/about/en.mdx
@@ -14,8 +14,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="transforming-women-healthcare"
   headingLevel="h1"
-  title="Connecting you with expert women's healthcare practitioners"
-  description="At Eleva Care, we provide a secure technology platform that empowers women to find and connect with licensed healthcare professionals for personalized care."
+  title="Transforming women's health with compassion and proven care"
+  description="We’re here to make it easier to find the right help, at the right moment. Eleva Care connects you with licensed healthcare professionals through a secure, trusted technology platform."
 />
 
 <MissionSection
@@ -23,11 +23,11 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   description={[
     {
       paragraph:
-        'Our mission is to provide a secure technology marketplace that connects women with independent, licensed healthcare practitioners. We offer the platform and tools; qualified healthcare professionals provide your medical care.',
+        'We believe every woman deserves access to knowledgeable, compassionate care. Our platform helps you find independent, licensed practitioners you can trust—so you feel supported at every step.',
     },
     {
       paragraph:
-        'We believe technology can make quality healthcare more accessible. By connecting patients with verified practitioners through our platform, we empower women with choice, convenience, and access to specialized care throughout every life stage.',
+        'We provide the technology that makes care simpler to access. Your chosen practitioner provides your medical care. Together, we help you move forward with confidence.',
     },
   ]}
   statsTitle="The numbers"
@@ -40,8 +40,8 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="our-vision"
   label="Our Vision"
-  title="Connecting women with expert healthcare providers"
-  description="To be the leading technology platform connecting women with licensed healthcare practitioners, making specialized care accessible and convenient throughout every life stage."
+  title="Bridging science and care—so support feels personal"
+  description="We bring trusted expertise closer to you—making specialized care easier to access across every life stage."
 />
 
 <BeliefsSection
@@ -55,18 +55,16 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     },
     {
       title: 'Knowledge is Power',
-      description:
-        'Empowering women with evidence-based information to make informed healthcare decisions.',
+      description: 'Clear, evidence-based information helps you make confident health decisions.',
     },
     {
       title: 'Collaborative Care',
-      description:
-        'Better health outcomes are achieved through collaboration between patients and healthcare providers.',
+      description: 'Better outcomes happen when people work together with trusted professionals.',
     },
     {
       title: 'Lifelong Journey',
       description:
-        "Women's health is a continuous journey that evolves through different life stages.",
+        "Women's health is a lifelong journey with changing needs—and we meet you where you are.",
     },
   ]}
 />
@@ -74,19 +72,19 @@ import TeamSection from '@/components/organisms/about/TeamSection';
 <HeadlineSection
   id="our-team"
   label="Meet our team"
-  title="Led by healthcare innovators and experts"
-  description="Our team combines expertise in women's health, technology, and patient care to revolutionize healthcare delivery."
+  title="Led by healthcare innovators and compassionate experts"
+  description="Our team brings together women’s health, technology, and patient care—to help you feel supported, informed, and cared for."
 />
 
 <TeamSection
   description={[
     {
       paragraph:
-        "Founded by healthcare professionals who witnessed firsthand the gaps in women's healthcare access, Eleva Care emerged as a technology solution to connect patients with expert practitioners more efficiently.",
+        'Eleva Care grew from a simple idea: expert care should be easier to reach. Our founders and advisors saw the gaps women face—and built a better way to connect you with trusted professionals.',
     },
     {
       paragraph:
-        'Today, Eleva Care operates a secure digital marketplace connecting women with independent, licensed healthcare practitioners. Our platform provides the technology; your chosen practitioner provides your medical care.',
+        'Today, Eleva Care operates a secure digital marketplace that connects women with independent, licensed practitioners. We provide the technology; your chosen practitioner provides your care.',
     },
   ]}
   ctaText="Read our story"
@@ -112,7 +110,7 @@ import TeamSection from '@/components/organisms/about/TeamSection';
   id="board-of-advisors"
   label="Guided by industry experts"
   title="Board of Advisors"
-  description="Our advisory board brings together leading voices in women's health, healthcare innovation, and digital transformation."
+  description="Our advisory board brings together leaders in women’s health, innovation, and clinical research."
 />
 
 <AdvisorsSection
@@ -200,17 +198,17 @@ import TeamSection from '@/components/organisms/about/TeamSection';
     {
       title: 'Independent Practice',
       description:
-        'Maintain your independence as a licensed healthcare provider. Set your own schedule, rates, and practice policies while using our technology platform.',
+        'Work on your terms with a flexible, secure platform. Set your own schedule, rates, and practice policies.',
     },
     {
       title: 'Secure Technology Platform',
       description:
-        'Access our secure booking, scheduling, payment processing, and encrypted clinical notes storage. We provide the technology; you provide the medical care.',
+        'Use our booking, scheduling, payments, and encrypted notes—so you can focus on care. We provide the technology; you provide the medical care.',
     },
     {
       title: 'Professional Network',
       description:
-        'Connect with other independent healthcare practitioners in our network for professional development and knowledge sharing opportunities.',
+        'Connect with peers across specialties for collaboration, education, and support.',
     },
   ]}
   applyUrl="mailto:patimota@gmail.com?subject=Application%20for%20Eleva%20Care&body=Hello%20Patrícia,%20I%20would%20like%20to%20apply%20for%20Eleva%20Care."
